fix boxTextBackground text-align (about me)

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -41,15 +41,8 @@
     display: flex;
     justify-content: center;
     font-size: 20px;
+    text-align: center;
 
-}
-
-
-@media (max-width: 768px) {
-    .boxTextBackground .p {
-        position: static;
-        text-align: center;
-    }
 }
 
 /* ! INFO [ICONE NOME, CITTA' & DATA NASCITA] */
